# uvproject

./: .gitignore  pyproject.toml
.github/workflows/: ci.yaml
libs/: calculation.py
tests/: test_calculation.py
